# ChangeLog for dev-util/netbeans
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
  Verified rest of the clusters. Added support for other localizations (not
  tested yet).

  26 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
  More clusters verified

  25 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
  Verified unbundling of some clusters

  24 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  -files/6.5/nbbuild_cluster.properties.patch, netbeans-6.5_rc1.ebuild:
  Adjustment according to bug
  http://www.netbeans.org/issues/show_bug.cgi?id=150953

  23 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
  Fixed cnd executables (reported by Patrick Holthaus
  <patrick.holthaus@uni-bielefeld.de>) and ant symlinking

  23 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
  Fixed linking to lucene to correct slot 2.3

  22 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> ++,
  +files/6.5/nbbuild_build.xml.patch,
  +files/6.5/nbbuild_cluster.properties.patch,
  +files/6.5/nbbuild_templates_projectized.xml.patch,
  -netbeans-6.5_beta.ebuild:
  Version bump

  21 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled rest of jars needed for 'soa' cluster

  20 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  partially unbundled jars needed for 'soa' cluster

  20 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled rest of jars needed for 'mobility' cluster

  18 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  unbundled more 'mobility' cluster jars

  16 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  pkg_postrm() removed

  08 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> -files/6.0,
  -files/6.1/config.sh,