@@ -2,6 +2,6 @@ AUX 6.5/nbbuild_build.xml.patch 878 RMD160 d1c94abc36c08efc829bfc2c970667d3339a7
 AUX 6.5/nbbuild_templates_projectized.xml.patch 867 RMD160 f368e1f80e1e332e2886c95d023a9b25f456b4e8 SHA1 4cb2e905a07125afa714bfecdcbee0902e81f67b SHA256 388ac6d71ce9d85efc7ec55585ae12ff8607a7b9e6239455a1545033463bf811
 DIST netbeans-6.5-l10n-20081024141538.tar.bz2 12699393 RMD160 bbdc4a1a0b111876cc3c1cb53ce1afa677ae258d SHA1 0cc9bb1a613ef0d37ed860bacdd7f036b5bb8ab0 SHA256 055c3040154996c333541895799897eb2892447784161e37472df069ec2dce77
 DIST netbeans-6.5rc1-200810171318-src.zip 278989368 RMD160 0ab73329699ef960a725fb1152404890159bde59 SHA1 7ac0ca333f23dbb1d70751eb5ee13f5395902099 SHA256 b11ffd3719f5129a3e86f0ab61fcbcdf6ff6927bd15126386441956170ec3835
-EBUILD netbeans-6.5_rc1.ebuild 36336 RMD160 eff56afc0e6d270e8a631f8be3c0a5b526fda341 SHA1 dc97e64140c0c280dc2a9ff53f6d8ccd1e7569b9 SHA256 8150160619b9cd419f866279823b493f50d9e5329e49246b97d312f33aa82178
-MISC ChangeLog 27622 RMD160 29f3ed2d2f92fd3adce243ff56fe64042571e411 SHA1 a033e15065e4c5df13dea384b58ce7f3ecc3c4b0 SHA256 c915c05fc9a7cbf9f2f82c27db3172af52e05bf223b2a105fabf8a18fe5c5219
+EBUILD netbeans-6.5_rc1.ebuild 36361 RMD160 2c5ec2723cfa3f616bfd0c5c33e8643ca828846e SHA1 0558d21fc096ebf448aac970932a15682df4f05d SHA256 e2e9419e7d0f3ca0f1c44b5997c9981203507f9f6860a243447c2794ceb5c51e
+MISC ChangeLog 27800 RMD160 3cb78fb15a4d74ecee338fd006724c9c03683e07 SHA1 4ffe6219a78ca08a06d1a1216fbcf9ec7d623d1d SHA256 c0d615555894ea29aa2aa766fa299b154d0ea96d5ff32d230444781b774b67ea
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
