@@ -2,6 +2,10 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
+  Minor fix in linguas support, but linguas support does not work in
+  netbeans yet for some reason
+
   27 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
   Verified rest of the clusters. Added support for other localizations (not
   tested yet).
